{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 263,
  "lineage": "978ba886-8694-cf97-9638-d8f83f9837e1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0428c163ef1bcc5c2",
            "domain": "vpc",
            "id": "eipalloc-0428c163ef1bcc5c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-112-35.compute-1.amazonaws.com",
            "public_ip": "3.208.112.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "environment02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050faf6efb78c9ec1",
            "domain": "vpc",
            "id": "eipalloc-050faf6efb78c9ec1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-151-143.compute-1.amazonaws.com",
            "public_ip": "3.212.151.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:internet-gateway/igw-0dd5214ac167e361a",
            "id": "igw-0dd5214ac167e361a",
            "owner_id": "101315813559",
            "tags": {
              "Name": "Home-igw"
            },
            "tags_all": {
              "Name": "Home-igw"
            },
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0428c163ef1bcc5c2",
            "connectivity_type": "public",
            "id": "nat-0732eaba3abe9ba0d",
            "network_interface_id": "eni-09dd36bf64ee9bf5a",
            "private_ip": "10.0.1.87",
            "public_ip": "3.208.112.35",
            "subnet_id": "subnet-038b8e25a24815378"
          },
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "environment02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050faf6efb78c9ec1",
            "connectivity_type": "public",
            "id": "nat-0c07b3b28b66741c0",
            "network_interface_id": "eni-00acbd7aee0107dcc",
            "private_ip": "10.0.1.92",
            "public_ip": "3.212.151.143",
            "subnet_id": "subnet-038b8e25a24815378"
          },
          "dependencies": [
            "module.vpc.aws_eip.environment02",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05c9b9ef0dbbd16691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0732eaba3abe9ba0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c9b9ef0dbbd1669",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_nat_gateway.environment",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00efd359d4f2ddc921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c07b3b28b66741c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00efd359d4f2ddc92",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.environment02",
            "module.vpc.aws_nat_gateway.environment02",
            "module.vpc.aws_route_table.private02",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dd5214ac167e361a",
            "id": "r-rtb-067563bb4fa09aec71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067563bb4fa09aec7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.environment",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:route-table/rtb-05c9b9ef0dbbd1669",
            "id": "rtb-05c9b9ef0dbbd1669",
            "owner_id": "101315813559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Home-private"
            },
            "tags_all": {
              "Name": "Home-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:route-table/rtb-00efd359d4f2ddc92",
            "id": "rtb-00efd359d4f2ddc92",
            "owner_id": "101315813559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Home-private02"
            },
            "tags_all": {
              "Name": "Home-private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:route-table/rtb-067563bb4fa09aec7",
            "id": "rtb-067563bb4fa09aec7",
            "owner_id": "101315813559",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd5214ac167e361a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Home-public"
            },
            "tags_all": {
              "Name": "Home-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.environment",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e40aad5f3076ec3",
            "route_table_id": "rtb-05c9b9ef0dbbd1669",
            "subnet_id": "subnet-03608d380e3897050"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053c3aaf693b2b1c8",
            "route_table_id": "rtb-00efd359d4f2ddc92",
            "subnet_id": "subnet-02abe77c7d969cbcc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private02",
            "module.vpc.aws_subnet.private02",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e19b5249d0edc366",
            "route_table_id": "rtb-067563bb4fa09aec7",
            "subnet_id": "subnet-038b8e25a24815378"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.environment",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:security-group/sg-05975d3b0a2dad0da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05975d3b0a2dad0da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20230218100931052900000007",
            "name_prefix": "terraform-",
            "owner_id": "101315813559",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:security-group/sg-011d9831f2eb6b03a",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-011d9831f2eb6b03a",
            "ingress": [],
            "name": "cluster-sg",
            "name_prefix": "",
            "owner_id": "101315813559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-sg"
            },
            "tags_all": {
              "Name": "cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:security-group/sg-0b59b0ae4880d5033",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b59b0ae4880d5033",
            "ingress": [],
            "name": "node-sg",
            "name_prefix": "",
            "owner_id": "101315813559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-sg"
            },
            "tags_all": {
              "Name": "node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3686581309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011d9831f2eb6b03a",
            "security_group_rule_id": "sgr-0c0fe9374eb1980c7",
            "self": false,
            "source_security_group_id": "sg-0b59b0ae4880d5033",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-2595224244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011d9831f2eb6b03a",
            "security_group_rule_id": "sgr-07bd3bb3e8298d995",
            "self": false,
            "source_security_group_id": "sg-0b59b0ae4880d5033",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1657152303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b59b0ae4880d5033",
            "security_group_rule_id": "sgr-079cbb2011029e240",
            "self": false,
            "source_security_group_id": "sg-011d9831f2eb6b03a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-82102326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b59b0ae4880d5033",
            "security_group_rule_id": "sgr-0fadf04fb000e99b3",
            "self": false,
            "source_security_group_id": "sg-0b59b0ae4880d5033",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:subnet/subnet-03608d380e3897050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03608d380e3897050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101315813559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Home-private"
            },
            "tags_all": {
              "Name": "Home-private"
            },
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:subnet/subnet-02abe77c7d969cbcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02abe77c7d969cbcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101315813559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Home-private02"
            },
            "tags_all": {
              "Name": "Home-private02"
            },
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:subnet/subnet-038b8e25a24815378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038b8e25a24815378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101315813559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Home-public"
            },
            "tags_all": {
              "Name": "Home-public"
            },
            "vpc_id": "vpc-09d17108fb87642e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101315813559:vpc/vpc-09d17108fb87642e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1f6a18c4ee03b38",
            "default_route_table_id": "rtb-069d3835895c1285b",
            "default_security_group_id": "sg-0642add75e7a7422b",
            "dhcp_options_id": "dopt-01b1f3d7a5d2e63d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d17108fb87642e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069d3835895c1285b",
            "owner_id": "101315813559",
            "tags": {
              "Name": "Home"
            },
            "tags_all": {
              "Name": "Home"
            }
          }
        }
      ]
    }
  ]
}